<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/zimkit_shape_12dp_topradius_white"
    android:divider="@drawable/zimkit_shape_1px_e6e6e6"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="11dp"
    android:paddingRight="24dp"
    android:paddingBottom="20dp"
    android:showDividers="middle">

    <TextView
      android:id="@+id/tv_create_single_chat"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:gravity="center"
      android:text="@string/zimkit_start_single_chat"
      android:textColor="@color/color_2a2a2a"
      android:textSize="15sp" />

    <TextView
      android:id="@+id/tv_create_group_chat"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:gravity="center"
      android:text="@string/zimkit_start_group_chat"
      android:textColor="@color/color_2a2a2a"
      android:textSize="15sp" />

    <TextView
      android:id="@+id/tv_join_group_chat"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:gravity="center"
      android:text="@string/zimkit_join_group_chat"
      android:textColor="@color/color_2a2a2a"
      android:textSize="15sp"
      android:visibility="gone" />
  </LinearLayout>
</layout>